# Sign-talk-animation

./: .gitignore
ClientProject/sighns_client/: .gitignore  package-lock.json  package.json
ClientProject/sighns_client/src/: App.css  App.js  TmpFunction.js
ClientProject/sighns_client/src/components/: AnimationDisplay.jsx  CameraRecorder.jsx
OutoWords/: C++server.bat  OutoWords.sln
OutoWords/OutoWords/: MovingVertex.cpp  MovingVertex.h  OutoGraph.cpp  OutoGraph.h  OutoWords.cpp  OutoWords.vcxproj  OutoWords.vcxproj.filters  Vertex.cpp  Vertex.h
OutoWords/OutoWords/x64/Debug/: OutoWords.exe.recipe  vc143.idb
OutoWords/OutoWords/x64/Debug/OutoWords.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OutoWords.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OutoWords/server/: CMakeLists.txt
OutoWords/server/src/: MovingVertex.cpp  MovingVertex.h  OutoGraph.cpp  OutoGraph.h  OutoWords.cpp  Outomation.cpp  Outomation.h  Vertex.cpp  Vertex.h  main.cpp
TmpFiles/: Moving.json  TEMPJSON.json
blender_server/: blender_animator.py  main.py  serve_animation.py  start_server_blender.bat
